test_suite5/ALAN/test_suite/alan-2022-examples/failing/000650_mutation.alan
source W0 begin begin relax end relax end
